<resources>
    <string name="app_name">WhatsEat</string>
    <string name="main_title">Подобрать блюдо на ужин</string>
    <string name="secondary_title">Книга рецептов</string>
    <string name="search_text">Поиск:</string>
    <string name="search_hint_text">Продукты</string>
    <string name="search_button">Подобрать рецепт</string>
    <string name="tutorial_text">Как пользоваться программой.</string>
    <string name="autoris">АВТОРИЗАЦИЯ</string>
    <string name="regist">РЕГИСТРАЦИЯ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tutorial_mail_text">Остались вопросы - напишите нам.</string>
    <string name="username_text1">Придумайте логин:</string>
    <string name="password_text1">Придумайте пароль:</string>
    <string name="password_text2_repeat">Придумайте пароль:</string>
    <string name="enter_password">Введите пароль:</string>
    <string name="enter_login">Введите логин:</string>

</resources>