<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/main_title"
        android:textSize="24sp"
        android:textColor="@color/main_text"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="16dp"/>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/line"
        app:layout_constraintTop_toBottomOf="@id/tv_main_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/start_margin"/>

    <TextView
        android:id="@+id/tv_secondary_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_main_title"
        app:layout_constraintTop_toBottomOf="@id/view_line"
        android:text="@string/secondary_title"
        android:textSize="16sp"
        android:textColor="@color/main_text"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="12dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_secondary_title"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginEnd="@dimen/end_margin"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_search_background">

        <TextView
            android:id="@+id/tv_search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_text"
            android:textColor="@color/main_text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/search_margin"
            android:layout_marginTop="@dimen/search_margin"/>

        <EditText
            android:id="@+id/editText_search"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="@dimen/search_margin"
           android:background="@drawable/shape_search_edit_text_background"
            android:hint="@string/search_hint_text"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@id/cl_search"
            app:layout_constraintStart_toStartOf="@id/cl_search"
            app:layout_constraintTop_toBottomOf="@id/tv_search_text" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/search_margin"
            android:layout_marginEnd="@dimen/search_margin"
            android:layout_marginBottom="@dimen/search_margin"
            android:backgroundTint="@color/search_button_background"
            android:text="@string/search_button"
            android:textSize="12sp"
            android:textColor="@color/main_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_search"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recipe_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginEnd="@dimen/end_margin"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_search" />

</androidx.constraintlayout.widget.ConstraintLayout>